--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 	<version>3.0-SNAPSHOT</version>
 	<name>Corner</name>
 	<description>core library</description>
-	<url>http://corner.1king1.com</url>
-	<inceptionYear>2008</inceptionYear>
+	<url>http://corner.googlecode.com</url>
+	<inceptionYear>2008,2009</inceptionYear>
 	<issueManagement>
 		<system>googlecode</system>
 		<url>http://code.google.com/p/corner</url>
@@ -176,8 +176,8 @@
 		</dependency>
 		<!--  alipay inc memcache client -->
 		<dependency>
-			<groupId>alipay.inc</groupId>
-			<artifactId>memcache-client</artifactId>
+			<groupId>com.fepss.3rd</groupId>
+			<artifactId>alipay-memcache-client</artifactId>
 			<version>0.0.1</version>
 		</dependency>
 		<dependency>
@@ -235,10 +235,9 @@
 			<version>2.0.235</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.hadoop</groupId>
+			<groupId>org.apache.mahout.hadoop</groupId>
 			<artifactId>hadoop-core</artifactId>
 			<version>0.19.1</version>
-			<classifier>patch1</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tapestry</groupId>
