加入静态资源部分的测试代码

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -20,5 +20,4 @@ log4j.category.org.apache.tapestry5.services.TapestryModule.ComponentClassResolv
 
 # Outputs startup statistics; time to setup and initialize the registry, and a list of
 # available services.
-log4j.category.org.apache.tapestry5=debug
-log4j.category.lichen=debug
+log4j.category.corner=debug
