--- a/pom.xml
+++ b/pom.xml
@@ -205,8 +205,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.google.appengine</groupId>
-			<artifactId>appengine-tools-sdk
-			</artifactId>
+			<artifactId>appengine-tools-sdk</artifactId>
 			<version>1.2.8</version>
 			<scope>provided</scope>
 		</dependency>
